# Yoda

./: .env.example  .gitattributes  .gitignore  .replit  BUILD_NOTES.md  Cargo.toml  Dockerfile  LICENSE-MIT  LICENSE-PROPRIETARY  README.md  deploy-qc-skills.sh  docker-compose.yml  llm-tunnel-manager.sh  model_lineages.json  package-lock.json  package.json  replit.md  replit.nix
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  cargo-build-intool-sigterm.md  repo-serving-and-git-push.md  rust-build-lsp-contention.md  sqlx-migration-drift.md  yoda-build-deploy.md
.cargo/: config.toml.example
agents/capomastro/: knowledge-base-curator.md  maestro-task-bible-manager.md  plenumnet-integration-specialist.md  ternary-crypto-reviewer.md  yoda-orchestrator.md
attached_assets/: Cargo_1779278971515.toml  Cargo_1779280453554.toml  ForgeTriple_v1.1.13_KYOKUSHIN_1779279457972.jsx  Pasted--18-Inter-Cube-Daemon-PT26-DSA-Native-Identity-Address-_1774005513856.txt  Pasted--9-QC-Open-Findings-Full-Resolution-What-Why-The-Produc_1774761077572.txt  Pasted--CORRECTED-script-generators-ts-fixes-for-the-YODA-Wind_1774023265251.txt  Pasted--CORRECTED-script-generators-ts-fixes-for-the-YODA-Wind_1774024233217.txt  Pasted--CORRECTED-script-generators-ts-fixes-for-the-YODA-Wind_1774030169706.txt  Pasted--CORRECTED-script-generators-ts-fixes-for-the-YODA-Wind_1774030623005.txt  Pasted--Headline-Lab-v3-1-4-Compendium-Integration-Configurati_1779460763264.txt  Pasted--MILESTONE-RECORD-PlenumNET-Inter-Cube-Infrastructure-F_1774029303039.txt  Pasted--MILESTONE-RECORD-PlenumNET-Inter-Cube-Infrastructure-F_1774062888199.txt  Pasted--PlenumLAN-Relay-Protocol-Reference-For-YODA-Agent-yoda_1774074299100.txt  Pasted--PlenumNET-Invariants-Complete-API-Reference-for-YODA-C_1774293401172.txt  Pasted--PlenumNET-Invariants-Complete-API-Reference-for-YODA-C_1774323788307.txt  Pasted--PlenumNET-Invariants-Complete-API-Reference-for-YODA-C_1774351561302.txt  Pasted--PlenumNET-Invariants-Complete-API-Reference-for-YODA-C_1774492897872.txt  Pasted--Title-tag-YODA-Auditable-Multi-Agent-AI-Platform-with-_1774042283886.txt  Pasted--UNDERSTOOD-FULL-CONTACT-NO-MERCY-You-gave-me-the-React_1778816243043.txt  Pasted--UPIID-V1-1-Review-YODA-Codebase-Reviewer-ParaCalculi-G_1778826486324.txt  Pasted--YODA-App-PlenumNET-Inter-Cube-Integration-Handoff-Date_1774351551300.txt  Pasted--YODA-Re-run-Installer-ErrorActionPreference-Stop-Write_1774030616582.txt  Pasted--YODA-Reconnect-Windows-Model-DeepSeek-R1-Distill-Qwen-_1774631670869.txt  Pasted--YODA-Self-Host-Installer-Model-DeepSeek-R1-Distill-Qwe_1774020687279.txt  Pasted--YODA-Self-Host-Installer-Model-DeepSeek-R1-Distill-Qwe_1774025812155.txt  Pasted--YODA-Self-Host-Installer-Model-DeepSeek-R1-Distill-Qwe_1774026059685.txt  Pasted--YODA-Self-Host-Installer-Model-DeepSeek-R1-Distill-Qwe_1774194925394.txt  Pasted--YODA-Self-Host-Installer-Model-DeepSeek-R1-Distill-Qwe_1774194991523.txt  Pasted--YODA-Self-Host-Installer-Model-DeepSeek-R1-Distill-Qwe_1774195184128.txt  Pasted--YODA-Self-Host-Installer-Model-DeepSeek-R1-Distill-Qwe_1774195343514.txt  Pasted--YODA-Self-Host-Installer-Model-DeepSeek-R1-Distill-Qwe_1774195576701.txt  Pasted--YODA-Self-Host-Installer-Model-DeepSeek-R1-Distill-Qwe_1774195885666.txt  Pasted--YODA-Self-Host-Installer-Model-DeepSeek-R1-Distill-Qwe_1774196551232.txt  Pasted--YODA-Self-Host-Installer-Model-DeepSeek-R1-Distill-Qwe_1774196707370.txt  Pasted--YODA-Self-Host-Installer-Model-Mathstral-7B-Port-8082-_1774195605583.txt  Pasted-AT-stands-for-Network-Address-Translation-It-s-what-you_1773966081499.txt  Pasted-At-C-Users-Sigma-AppData-Local-Temp-yoda-3199531378-ps1_1774024591315.txt  Pasted-Brand-Guardian-Agent-Personality-You-are-Brand-Guardian_1783894583446.txt  Pasted-Did-you-look-at-this-Strategy-doesn-t-appear-to-be-3-se_1773963645720.txt  Pasted-Engine-A-offline-Self-Hosted-Run-a-model-on-your-own-ha_1774068381276.txt  (+96 more)
attached_assets/kyokushin_extract/: Cargo_kyokushin.toml  kyokushin_brothers.rs
crates/ninja-exec/: Cargo.toml
crates/yoda-api/: Cargo.toml
crates/yoda-api/src/: agents.rs  array3_installation_engine.rs  audit.rs  auth.rs  bible.rs  capability.rs  cube_relay.rs  error.rs  forge_routes.rs  install.rs  kb.rs  kyokushin_brothers.rs  llm_agent_gateway.rs  main.rs  modes.rs  query.rs  routes.rs  security.rs  security_tests.rs  settings.rs  state.rs  three_factor.rs  websocket.rs
crates/yoda-crs/: Cargo.toml
crates/yoda-crs/src/: main.rs
crates/yoda-inference-router/: Cargo.toml
crates/yoda-inference-router/src/: censorship.rs  config.rs  dispatch.rs  diversity.rs  health.rs  lib.rs  response_cache.rs  validation.rs
crates/yoda-knowledge-base/: Cargo.toml
crates/yoda-knowledge-base/src/: context.rs  embedding.rs  lib.rs  memory_cache.rs  retention.rs  search.rs  storage.rs  tagging.rs
crates/yoda-memory/: Cargo.toml
crates/yoda-orchestrator/: Cargo.toml
crates/yoda-plenumnet-bridge/: Cargo.toml
crates/yoda-plenumnet-bridge/src/: audit.rs  encryption.rs  hashing.rs  kem.rs  key_derivation.rs  lib.rs  signing.rs
crates/yoda-task-bible/: Cargo.toml
crates/yoda-task-bible/src/: crud.rs  lib.rs  number_index.rs
docs/: 00_START_HERE.md  COMPLETE_SYSTEM_INTEGRATION.md  LLM_INFRASTRUCTURE_GUIDE.md  api-contract.md  benchmarks.md
frontend/: .env.example  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: array3-cubes-flush.html  array3-monitor.html  brand-book-0.html  install-local.sh
migrations/: 20260319000001_auth_tables.sql  20260319000002_core_tables.sql  20260319000003_indexes.sql  20260320000001_crs_registrations.sql  20260321000001_engine_cube_endpoint.sql  20260322000001_engine_is_disabled.sql  20260326000001_tunnel_open_status.sql  20260522000001_daemon_config.sql  20260522000002_thread_metadata.sql  20260524000001_thread_deletion_grace.sql
scripts/: bootstrap-agents.sh  compile-agents.sh  deploy.sh  init-db.sh  post-merge.sh  replit-run.sh  rerun-yoda-install.ps1  setup-mathstral.ps1  sync-upstream.sh  verify-deployment.sh
(+149 files in other folders)
