[package]
name = "yoda-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
yoda-orchestrator = { path = "../yoda-orchestrator" }
yoda-inference-router = { path = "../yoda-inference-router" }
yoda-knowledge-base = { path = "../yoda-knowledge-base" }
yoda-task-bible = { path = "../yoda-task-bible" }
yoda-plenumnet-bridge = { path = "../yoda-plenumnet-bridge" }

# Web framework
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true

# Database
sqlx.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Auth
argon2.workspace = true
jsonwebtoken.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
hex = "0.4"
reqwest.workspace = true

[dev-dependencies]
wiremock.workspace = true
tokio-test.workspace = true
