[package]
name = "yoda-task-bible"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
yoda-plenumnet-bridge = { path = "../yoda-plenumnet-bridge" }
yoda-orchestrator = { path = "../yoda-orchestrator" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx.workspace = true

[dev-dependencies]
tokio-test.workspace = true
